[package]
name = "colider_lib"
version = "0.1.0"
edition = "2024"
description = "A bevy collider crate."
license = "MIT"
readme = "README.txt"
repository = "https://github.com/Motanescu1357/collider-lib-for-bevy.git"

[dependencies]
bevy = "0.16.0"

[features]
default = ["auto_move", "event"]
auto_move = ["plugin"]
event = ["plugin"]
plugin = []
